interpreter/Interpreter1/src/Grammar
stmt  : assn ';'
assn  : id '=' expr
expr  : term addop expr
      | term
term  : fact mulop term
      | fact
fact  : '-' | id 
      | '-' | num
      | '-' | (' expr ')'
num	  : '-' digit
	  | digit
	  | digit '.' digit
addop : '+'
      | '-'
mulop : '*'
      | '/'
